# snmpxx-agentxx

./: README.md  Snmp++Agent++.sln
agent++/: CHANGES  FAQ  INSTALL  Makefile.am  Makefile.in  README  README.autoconf  agent++-4.pc.in  config.h.in  configure  configure.ac  doc_config
agent++/agenpro/: Makefile.am  Makefile.in
agent++/agenpro/agent/: Makefile.in
agent++/agenpro/agent/include/: Makefile.am  Makefile.in
agent++/agenpro/agent/src/: Makefile.am  Makefile.in  agent.cpp
agent++/agenpro/simagent/: Makefile.in
agent++/agenpro/simagent/include/: Makefile.in
agent++/agenpro/simagent/src/: Makefile.in  agent.cpp
agent++/examples/: Makefile.am  Makefile.in
agent++/examples/atm_mib/: Makefile.in
agent++/examples/atm_mib/include/: Makefile.am  Makefile.in  agentpp_notifytest_mib.h  agentpp_test_mib.h  atm_mib.h
agent++/examples/atm_mib/src/: Makefile.am  Makefile.in  agent.cpp  agentpp_notifytest_mib.cpp  agentpp_test_mib.cpp  atm_mib.cpp
agent++/examples/cmd_exe_mib/: Makefile.am  Makefile.in
agent++/examples/cmd_exe_mib/include/: Makefile.am  Makefile.in  cmd_exe_mib.h
agent++/examples/cmd_exe_mib/src/: Makefile.am  Makefile.in  agent.cpp  cmd_exe_mib.cpp
agent++/examples/dynamic_table/: Makefile.am  Makefile.in
agent++/examples/dynamic_table/src/: Makefile.in  agent.cpp
agent++/examples/proxy/: Makefile.in
agent++/examples/proxy/src/: Makefile.am  Makefile.in  snmp_proxy.cpp
agent++/examples/proxy_forwarder/: Makefile.in
agent++/examples/proxy_forwarder/src/: Makefile.in  agent.cpp
agent++/examples/static_table/: Makefile.in
agent++/examples/static_table/src/: Makefile.am  Makefile.in  agent.cpp
agent++/include/: Makefile.am  Makefile.in
agent++/include/agent_pp/: List.h  Makefile.am  Makefile.in  agent++.h  agent++.h.in  agentpp_config_mib.h  agentpp_simulation_mib.h  avl_map.h  entry.h  map.h  mib.h  mib_avl_map.h  mib_complex_entry.h  mib_context.h  mib_entry.h  mib_map.h  mib_policy.h  mib_proxy.h  notification_log_mib.h  notification_originator.h  oidx_defs.h  oidx_ptr.h  proxy_forwarder.h  request.h  sim_mib.h  snmp_community_mib.h  snmp_counters.h  snmp_group.h  snmp_notification_mib.h  snmp_pp_ext.h  snmp_proxy_mib.h  snmp_request.h  snmp_target_mib.h  snmp_textual_conventions.h  system_group.h  threads.h  tools.h  v3_mib.h  vacm.h
agent++/m4/: acx_cxx_bool.m4  acx_xopen.m4
agent++/src/: Makefile.am  Makefile.in  agentpp_config_mib.cpp  agentpp_simulation_mib.cpp  avl_map.cpp  map.cpp  mib.cpp  mib_avl_map.cpp  mib_complex_entry.cpp  mib_context.cpp  mib_entry.cpp  mib_map.cpp  mib_policy.cpp  mib_proxy.cpp  notification_log_mib.cpp  notification_originator.cpp  proxy_forwarder.cpp  request.cpp  sim_mib.cpp  snmp_community_mib.cpp  snmp_counters.cpp  snmp_group.cpp  snmp_notification_mib.cpp  snmp_pp_ext.cpp  snmp_proxy_mib.cpp  snmp_request.cpp  snmp_target_mib.cpp  snmp_textual_conventions.cpp  system_group.cpp  threads.cpp  tools.cpp  v3_mib.cpp  vacm.cpp
agentx++/: CHANGES  LICENSE_v2.txt  Makefile.am  Makefile.in  README  README.autoconf  aclocal.m4  agentx++-2.pc.in  config.h.in  configure  configure.ac  doc_config  libagentx.h
agentx++/agenpro/: Makefile.am  Makefile.in
agentx++/agenpro/master/: Makefile.in
agentx++/agenpro/master/include/: Makefile.am  Makefile.in
agentx++/agenpro/master/src/: Makefile.am  Makefile.in  Modules.mk  agent.cpp
agentx++/agenpro/subagent/: Makefile.am  Makefile.in
agentx++/agenpro/subagent/include/: Makefile.in
agentx++/agenpro/subagent/src/: Makefile.am  Makefile.in  agent.cpp
agentx++/examples/: Makefile.am  Makefile.in
agentx++/examples/master/: Makefile.am  Makefile.in
agentx++/examples/master/src/: Makefile.am  Makefile.in  master.cpp
agentx++/examples/subagent/: Makefile.am  Makefile.in
agentx++/examples/subagent/include/: Makefile.am  Makefile.in  agentpp_notifytest_mib.h  agentpp_test_mib.h  atm_mib.h  if_mib.h
agentx++/examples/subagent/src/: Makefile.am  Makefile.in  agentpp_notifytest_mib.cpp  agentpp_test_mib.cpp  atm_mib.cpp  if_mib.cpp  subagent.cpp  subagent2.cpp
agentx++/include/: Makefile.am  Makefile.in
agentx++/include/agentx_pp/: Makefile.am  Makefile.in  agentpp_agentx_mib.h  agentx++.h  agentx++.h.in  agentx.h  agentx_def.h  agentx_index.h  agentx_master.h  agentx_mib.h  agentx_node.h  agentx_pdu.h  agentx_peer.h  agentx_queue.h  agentx_reg.h  agentx_request.h  agentx_session.h  agentx_subagent.h  agentx_threads.h
agentx++/src/: Makefile.am  Makefile.in  Makefile.linux  agentpp_agentx_mib.cpp  agentx.cpp  agentx_index.cpp  agentx_master.cpp  agentx_mib.cpp  agentx_node.cpp  agentx_pdu.cpp  agentx_peer.cpp  agentx_queue.cpp  agentx_reg.cpp  agentx_request.cpp  agentx_session.cpp  agentx_subagent.cpp  common.mk
libdes/: INSTALL  Makefile  VERSION
libdes/examples/: destest.c  speed.c
snmp++/: CHANGES.snmp++v3  Makefile.am  Makefile.in  README.autoconf  configure  configure.ac  doc_config  snmp++-3.pc.in
snmp++/consoleExamples/: Makefile.am  Makefile.in  snmpGet.cpp
snmp++/src/: Makefile.in  address.cpp  auth_priv.cpp  ctr64.cpp  log.cpp  mp_v3.cpp  msgqueue.cpp  usm_v3.cpp  uxsnmp.cpp
vs2013/: README.win32
vs2013/AGENT++/: AGENT++.sln
vs2013/AGENT++/AGENT++/: AGENT++.vcxproj  AGENT++.vcxproj.filters
vs2013/AGENT++/SampleAgent/: SampleAgent.vcxproj  SampleAgent.vcxproj.filters  snmpv3_boot_counter
vs2013/AGENT++/include/: config.h  libagent.h
vs2013/AgentX++/: AgentX++.sln
vs2013/AgentX++/AgentX++/: AgentX++.vcxproj  AgentX++.vcxproj.filters
vs2013/AgentX++/MasterAgent/: MasterAgent.vcxproj  MasterAgent.vcxproj.filters
vs2013/AgentX++/include/: config.h  libagentx.h
vs2013/SNMP++/: SNMP++.sln
vs2013/SNMP++/SNMP++/: SNMP++.vcxproj  SNMP++.vcxproj.filters
vs2013/SNMP++/include/: config.h
vs2013/SNMP++/include/snmp_pp/: config_snmp_pp.h
vs2013/SNMP++/snmpWalk/: snmpWalk.vcxproj  snmpWalk.vcxproj.filters
vs2013/libdes/: libdes.sln
vs2013/libdes/libdes/: libdes.vcxproj  libdes.vcxproj.filters
